welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: '=' expected but ';' found.
def estDevantLibre():Boolean = {
^Program:14: error: ';' expected but '[' found.
}[/!]
 ^